<resources>
    <string name="app_name">Traditional Architecture Maintain</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
</resources>