...
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="RegisterCode"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
...
